<resources>
    <string name="app_name">Alarm</string>

    <string name="alram_format">알람방식</string>
    <string name="sound">소리</string>
    <string name="vibrate">진동</string>
    <string name="sound_vibrate">진동 및 소리</string>
    <string name="alram_content">알람음</string>
    <string name="no_content">No Content</string>
    <string name="alarm_name">알람이름</string>
    <string name="default_alarm_name">알람</string>
    <string name="repeat_weekly">매주반복</string>


    <string name="save">완료</string>
    <string name="cancelation">취소</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--START AlarmListActivity -->
    <string name="tab_alarm">알람</string>
    <string name="tab_location">위치알람</string>
    <string name="tab_smart">스마트알람</string>
    <!--END AlarmListActivity -->
</resources>
