<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle|end">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_name"
                    android:textSize="17sp" />
                <EditText
                    android:id="@+id/alarm_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:hint="@string/default_alarm_name"
                    android:focusableInTouchMode="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TimePicker
                    android:id="@+id/timePickerAddAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:timePickerMode="spinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggleBtnSunday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textOff="일"
                        android:textOn="일" />

                    <ToggleButton
                        android:id="@+id/toggleBtnMonday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="월"
                        android:textOn="월" />

                    <ToggleButton
                        android:id="@+id/toggleBtnTuesday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="화"
                        android:textOn="화" />

                    <ToggleButton
                        android:id="@+id/toggleBtnWednesday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="수"
                        android:textOn="수" />

                    <ToggleButton
                        android:id="@+id/toggleBtnThursday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="목"
                        android:textOn="목" />

                    <ToggleButton
                        android:id="@+id/toggleBtnFriday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="금"
                        android:textOn="금" />

                    <ToggleButton
                        android:id="@+id/toggleBtnSaturday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/blue"
                        android:textOff="토"
                        android:textOn="토" />
                </LinearLayout>

                <!--<RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/repeatCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/repeatCheckBox"
                        android:layout_marginRight="3dp"
                        android:text="@string/repeat_weekly"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_alignBaseline="@id/repeatCheckBox"/>
                </RelativeLayout>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/alram_format"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroupAdd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:checkedButton="@+id/radioBtnSound"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBtnSound"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sound" />

                    <RadioButton
                        android:id="@+id/radioBtnVibrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vibrate" />

                    <RadioButton
                        android:id="@+id/radioBtnSoundVibrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sound_vibrate" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addAlramContentBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alram_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/alarmSoundContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_content"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewViewImg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/speaker_on_blue" />

                <SeekBar
                    android:id="@+id/seekBarVolumeBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="15"
                    android:layout_weight="9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="다시 울림" />
                    <TextView
                        android:id="@+id/textViewAlramRepeatSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5분,3회" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Switch
                        android:id="@+id/switchRepeatSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:background="#ffc0c0c0"
        android:orientation="horizontal"
        android:paddingTop="1.0px">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:showDividers="end">

            <Button
                android:id="@+id/btnSettingsCancel"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginRight="0.0px"
                android:background="@drawable/button_effect"
                android:text="@string/cancelation"
                android:textColor="#ff000000"
                android:textSize="14.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:showDividers="beginning">

            <Button
                android:id="@+id/btnSettingsOk"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="1.0dip"
                android:background="@drawable/button_effect"
                android:text="@string/save"
                android:textColor="#ff000000"
                android:textSize="14.0sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>